# allama

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  allama.py  config.json  config.py  models.csv  prompts.json  pyproject.toml  requirements.txt  setup.py  test_runner.py
allama/: __init__.py  allama.py  config_loader.py  evaluator.py  main.py  open_report.py  publisher.py  report_generator.py
allama/static/css/: allama-charts.css
allama/static/js/: radar-chart.js
allama/static/templates/: stats-badges.html
allama/templates/: report_template.html
tests/: __init__.py  test_allama.py
