[project]
name = "allama"
version = "0.1.2"
description = "A Python package for allama"
authors = [
    {name = "Tom Sapletta", email = "info@softreck.dev"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (>=2.28.0)",
    "pandas (>=1.5.0)",
    "jinja2 (>=3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
