[tool.poetry]
name = "allama"
version = "0.1.12"
description = "A Python package for interacting with AI models"
authors = ["Tom Sapletta <info@softreck.dev>"]
license = "MIT"
readme = "README.md"
packages = [{include = "allama"}]

[tool.poetry.scripts]
allama = "allama.main:main"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.28.0"
jinja2 = "^3.0.0"
pandas = "^2.2.3"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
